# muckdb

./: .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  Cargo.toml  FUTURE_DIRECTIONS.md  LICENSE  README.md  demo.sh  release.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  e2e.yml  release.yml
docs/superpowers/plans/: 2026-07-03-nav-clipboard-export.md  2026-07-11-playwright-frontend-e2e.md  2026-07-12-sequence-diagram-tile.md  2026-07-12-timeline-tile.md
docs/superpowers/specs/: 2026-07-03-nav-clipboard-export-design.md  2026-07-11-playwright-frontend-e2e-design.md  2026-07-12-sequence-diagram-tile-design.md  2026-07-12-timeline-tile-design.md
packaging/: README.md
scripts/: render-formula.sh
scripts/e2e/: copy_image_hang_test.py  export_import_test.py  forget_db_test.py  nav_test.py  tile_resize_test.py  toc_resize_test.py
src/: daemon.rs  export.rs  facade.rs  formats.rs  introspect.rs  main.rs  paths.rs  predict.rs  server.rs  session.rs  shot.rs  skill.rs  store.rs
src/assets/: index.html  timeline-route.js  tree-sitter-sql.wasm
src/assets/skill/: SKILL.md
tests/e2e/: .gitignore  constants.ts  global-setup.ts  global-teardown.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
tests/e2e/fixtures/: seed.ts
tests/e2e/specs/: anchors.spec.ts  box.spec.ts  charts.spec.ts  explore.spec.ts  export.spec.ts  filters.spec.ts  lists.spec.ts  map.spec.ts  poster.spec.ts  presentation.spec.ts  probability.spec.ts  query_editor.spec.ts  sequence.spec.ts  session.spec.ts  smoke.spec.ts  (+2 more)
tests/unit/: timeline-route.test.js
