[package]
name = "muckdb"
version = "0.2.6"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = { version = "0.8.9", features = ["ws"] }
daemonize = "0.5.0"
directories = "6.0.0"
libc = "0.2.186"
mdns-sd = "0.20.0"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
tokio = { version = "1.52.3", features = ["full"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
